# ignition-mcp

./: .dockerignore  .env.example  .gitignore  .mcp-alt.json  .mcp-http.json  .mcp-simple.json  .mcp.json  CLAUDE_CODE_SETUP.md  Dockerfile  README.md  USAGE.md  claude_code_config.json  demo_tools.py  enhanced_mcp_server.py  fastapi_server.py  fetch_openapi.py  http_mcp_server.py  ignition_tools_summary.json  mcp_server.py  minimal_mcp_server.py  pyproject.toml  requirements.txt  run_server.sh  simple_fastmcp_server.py  simple_main_server.py  simple_mcp_test.py  test_mcp_protocol.py  test_server.py
.claude/: settings.local.json
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  configuration.md  contributing.md  examples.md  installation.md  troubleshooting.md
src/ignition_mcp/: __init__.py  api_generator.py  config.py  ignition_client.py  ignition_tools.py  main.py  server.py
